--- a/test/dances.back2top.html
+++ b/test/dances.back2top.html
@@ -41,13 +41,13 @@
 	-->
 
 	<p class="d-test" style="padding:10px;">
-		<input type="button" value="恢复" onclick="dances.back2top.on()">
+		<input type="button" value="恢复" onclick="dances.back2top.resume()">
 		<br>
-		<input type="button" value="暂停" onclick="dances.back2top.off()">
+		<input type="button" value="暂停" onclick="dances.back2top.pause()">
 	</p>
-	<p class="d-test d-test-01 current" data-num="1200">正数</p>
+	<p class="d-test d-test-01 " data-num="1200">正数</p>
 	<p class="d-test d-test-01 " data-num="350">小于视口正数</p>
-	<p class="d-test d-test-02 " data-num="0.3">小数</p>
+	<p class="d-test d-test-02 current" data-num="0.3">小数</p>
 	<p class="d-test d-test-03 " data-num="-1500">负数</p>
 
 	<script type="text/javascript">
@@ -64,7 +64,7 @@
 			$(".d-test").each(function(){
 				var v = this.getAttribute("data-num"),
 					$this = $(this)
-					;
+				;
 
 				if(v){
 					v = v * 1;
@@ -88,7 +88,7 @@
 		define.amd.back2top = true;
 		require(["../../../dances.dom/dances.dom", "../../../dances.javascript/dances.javascript", "../dances.back2top"], function(dances5, dances, _){
 
-			var h = $(".d-test").filter(".current").attr("data-num") * 1;
+			var h = $(".d-test").filter(".current").attr("data-num") - 0;
 
 			_({
 				speed    : 300,
