--- a/test/dances.back2top.html
+++ b/test/dances.back2top.html
@@ -46,8 +46,8 @@
 	</p>
 	<p class="d-test d-test-01 " data-num="1200">正数</p>
 	<p class="d-test d-test-01 " data-num="350">小于视口正数</p>
-	<p class="d-test d-test-02 current" data-num="0.3">小数(百分比)</p>
-	<p class="d-test d-test-03 " data-num="-1500">负数</p>
+	<p class="d-test d-test-02 " data-num="0.3">小数(百分比)</p>
+	<p class="d-test d-test-03 current" data-num="-1500">负数</p>
 
 	<script type="text/javascript">
 		define.amd.jQuery = true;
